Design Upgrade, Mock Item Bornes et Utilisateurs et design AjouterBornePage fait (CS a faire)

--- a/Solary_Gestionnaire/Solary_Gestionnaire.csproj
+++ b/Solary_Gestionnaire/Solary_Gestionnaire.csproj
@@ -10,8 +10,8 @@
 
   <ItemGroup>
     <Folder Include="Model\" />
+    <Folder Include="Ressource\Images\" />
     <Folder Include="Service\" />
-    <Folder Include="Ressource\" />
   </ItemGroup>
 
 </Project>
